tests/expectations/compiler/structs/duplicate_struct_name_fail.out
Error [EAST0372011]: There are two definitions of struct `Point` that do not match.
    --> compiler-test:2:5
     |
   2 |     struct Point {
     |     ^^^^^^^^^^^^^^
   3 |         x: u32,
     |         ^^^^^^^
   4 |         y: u32,
     |         ^^^^^^^
   5 |     }
     |     ^
     |
     = Check the import files to see if there are any struct definitions of the same name.
